--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,9 @@
 {
   "name": "aplc-app",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {
+      "enabled": false
+    }
   },
   "type": "react"
 }
