--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -19,12 +14,19 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
+    "csv-parser": "^3.0.0",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.0.1",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
+    "tss-react": "^3.6.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -63,9 +65,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@capacitor/cli": "3.4.3"
   },
   "description": "An Ionic project"
 }
